react component Navigation return

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,19 +1,1 @@
-<%= react_component 'AdminPanel' %>
-
-<ul class="nav nav-tabs">
-    <li role="presentation" class="active">
-        <a href="#manage-pane" data-toggle="tab" aria-expanded="true">
-            Manage Posts
-        </a>
-    </li>
-    <li role="presentation" class="">
-        <a href="#create-pane" data-toggle="tab" aria-expanded="false">
-            Create Post
-        </a>
-    </li>
-    <li role="presentation" class="">   
-        <a href="#preview-pane" data-toggle="tab" aria-expanded="false">
-            Preview Post
-        </a>
-    </li>
-</ul>
+<%= react_component 'Navigation' %>
