--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,24 +1,82 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ReactRailsCrudTutorial</title>
-  <%= stylesheet_link_tag    'application', media: 'all' %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
+	<title>ReactRailsCrudTutorial</title>
+	<%= stylesheet_link_tag    'application', media: 'all' %>
+	<%= javascript_include_tag "application" %>
+	<%= csrf_meta_tags %>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css">
+	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
 
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
 
 
 </head>
 <body>
+	<div class="container" style="margin-top:20px;">
+		<div class="row well">
+			<div class="col-md-6 ol-md-offset-3  col-xs-6 col-xs-offset-3">
+				<h3 class="text-center">Basic Example</h3>
+				<div class="" style="">
+					<ul class="list-group checked-list-box">
+						<li class="list-group-item" style="cursor: pointer;">
+							<span class="state-icon glyphicon glyphicon-unchecked"></span>
+							Cras justo odio<input type="checkbox" class="hidden"></li>
+							<li class="list-group-item list-group-item-primary active" data-checked="true" style="cursor: pointer;">
+								<span class="state-icon glyphicon glyphicon-check"></span>Dapibus ac facilisis in<input type="checkbox" class="hidden">
+							</li>
+							<li class="list-group-item" style="cursor: pointer;">
+								<span class="state-icon glyphicon glyphicon-unchecked"></span>
+								Morbi leo risus<input type="checkbox" class="hidden">
+							</li>
+							<li class="list-group-item" style="cursor: pointer;">
+								<span class="state-icon glyphicon glyphicon-unchecked"></span>
+								Porta ac consectetur ac<input type="checkbox" class="hidden">
+							</li>
+							<li class="list-group-item" style="cursor: pointer;">
+								<span class="state-icon glyphicon glyphicon-unchecked"></span>
+								Vestibulum at eros<input type="checkbox" class="hidden">
+							</li>
+							<li class="list-group-item" style="cursor: pointer;">
+								<span class="state-icon glyphicon glyphicon-unchecked">
+									
+								</span>Cras justo odio<input type="checkbox" class="hidden">
+							</li>
+							<li class="list-group-item" style="cursor: pointer;">
+								<span class="state-icon glyphicon glyphicon-unchecked">
+									
+								</span>Dapibus ac facilisis in<input type="checkbox" class="hidden">
+							</li>
+							<li class="list-group-item" style="cursor: pointer;">
+								<span class="state-icon glyphicon glyphicon-unchecked">
+									
+								</span>Morbi leo risus<input type="checkbox" class="hidden">
+							</li>
+							<li class="list-group-item" style="cursor: pointer;">
+								<span class="state-icon glyphicon glyphicon-unchecked">
+									
+								</span>Porta ac consectetur ac<input type="checkbox" class="hidden">
+							</li>
+							<li class="list-group-item" style="cursor: pointer;">
+								<span class="state-icon glyphicon glyphicon-unchecked">
+									
+								</span>Vestibulum at eros<input type="checkbox" class="hidden">
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+		
 
-<%= yield %>
 
-</body>
-</html>
+
+		<%= yield %>
+
+	</body>
+	</html>
