add function to control check

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -63,10 +63,10 @@
  	}
  }
 
- .content {
- 	display: inline-block;
- 	padding: 20px;
- 	background: $accent;
+ // .content {
+ // 	display: inline-block;
+ // 	padding: 20px;
+ // 	background: $accent;
 
- 	img { max-width: 100%; }
- }
+ // 	img { max-width: 100%; }
+ // }
