--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 
 </head>
 <body>
-	<div class="container" style="margin-top:20px;">
+	<!-- <div class="container" style="margin-top:20px;">
 		<div class="row well">
 			<div class="col-md-6 ol-md-offset-3  col-xs-6 col-xs-offset-3">
 				<h3 class="text-center">Basic Example</h3>
@@ -71,7 +71,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		
 
 
